Fixed a tab position issue in install/upgrade wizard
I did something in our default `ul` styles that messed up the tabs in install/upgrade wizards.

--- a/DNN Platform/Dnn.ClientSide/src/styles/install/install.scss
+++ b/DNN Platform/Dnn.ClientSide/src/styles/install/install.scss
@@ -28,6 +28,7 @@ body {
                 display: flex;
                 list-style-type: none;
                 width: 100%;
+                padding: 0;
                 >li{
                     &:last-child{
                         flex-grow: 1;
